# jormungandr

./: .gitignore  README.md  pyproject.toml  requirements.txt  train.py  validate.py
.github/workflows/: cd.yml  ci.yml
docs/: developer_setup.md
notebooks/: hugging_face_detr.ipynb  kristoffer.ipynb  mot.ipynb  playground.ipynb
scripts/: download.bash  download.slurm  experiment_1.slurm  experiment_2.slurm  experiment_3.slurm  experiment_3_0.slurm  experiment_3_1.slurm  experiment_3_2.slurm  experiment_3_3.slurm  experiment_5.slurm  experiment_6.slurm  experiment_7.slurm  fast_train.slurm  train.slurm  validate.slurm  validate_dataset.py  validate_dataset.slurm
src/jormungandr/: backbone.py  dataset.py  detr_decoder.py  embedder.py  encoder.py  fafnir.py  jormungandr.py  output_head.py
src/jormungandr/config/: aux_loss.yaml  config.yaml  configuration.py  detr.yaml  detr_encoder.yaml  detr_pretrained.yaml  experiment_1.yaml  experiment_1_0.yaml  experiment_1_4.yaml  experiment_1_6.yaml  experiment_2.yaml  experiment_2_detr.yaml  experiment_2_ffn.yaml  experiment_2_ffn_265_hidden_size.yaml  experiment_2_mamba1.yaml  experiment_2_no_freeze.yaml  experiment_3.yaml  experiment_3_0.yaml  experiment_3_1.yaml  experiment_3_2.yaml  experiment_3_3.yaml  experiment_5.yaml  experiment_5_2.yaml  experiment_5_4.yaml  experiment_5_64.yaml  experiment_5_8.yaml  experiment_5_8_detr.yaml  experiment_5_fafnir.yaml  experiment_7.yaml  test_config.yaml
src/jormungandr/datasets/: processor.py
src/jormungandr/datasets/video/: mot17.py
src/jormungandr/training/: coco_eval.py  criterion.py  optimizer.py  scheduler.py  trainer.py  visualization.py
src/jormungandr/utils/: debug_utils.py  image_processors.py  model_fetcher.py  seed.py
tests/: test_backbone.py  test_criterion.py  test_dataloader.py  test_detr_encoder.py  test_fafnir.py  test_jormungandr.py  test_mamba_encoder.py  test_output_head.py  test_training.py
