[project]
name = "jormungandr"
version = "0.0.1"
description = "Jormungandr is an novel end-to-end video object detection system that leverages the Spatial-Temporal Mamba architecture to accurately detect and track objects across video frames."
readme = "README.md"
authors = [
    { name = "Sverre Nystad", email = "sverrenystad@gmail.com" },
    { name = "Kristoffer Nohr Olaisen", email = "66872548+Knolaisen@users.noreply.github.com" }
]
requires-python = ">=3.12"
license-files = ["LICENSE"]

dependencies = [
    "causal-conv1d>=1.5.2; sys_platform == 'linux'",
    "mamba-ssm[causal-conv1d]>=2.2.5; sys_platform == 'linux'",
    "codecarbon>=3.0.5",
    "python-dotenv>=1.1.1",
    "torch>=2.8.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "wandb>=0.22.0",
    "numpy>=2.0.0",
    "timm>=1.0.25",
    "datasets>=4.6.1",
    "scipy>=1.17.1",
    "supervision>=0.27.0.post1",
]

[tool.uv]
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu129", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]

torchvision = [
    { index = "pytorch-cu129", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.scripts]
jormungandr = "jormungandr:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.6",
    "scipy>=1.16.2",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-api-autonav>=0.3.0",
    "mkdocs-autoapi>=0.4.1",
    "mkdocs-awesome-nav>=3.1.2",
    "mkdocs-material>=9.6.16",
    "mkdocstrings>=0.30.0",
    "mkdocstrings-python>=1.16.12",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow",
]
